Sun Mar 17 20:42:14 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile (distclean): Add directory existence check.
	* current-trunk/libelf/GNUmakefile.am (dist_man3_MANS): Add elf_open.3.
	* current-trunk/as: Add svn:ignore property.
	* current-trunk/isa: Likewise.

Sun Mar 17 17:46:21 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* Makefile: Add.

Sun Mar 17 17:44:42 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sun Mar 17 17:00:37 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2921

Sun Mar 17 16:11:39 CET 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Remove remaining svn:keywords properties.

Sat Dec  8 19:50:41 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Dec  8 19:18:34 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2723

Tue Oct 16 23:39:59 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Tue Oct 16 23:34:18 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2611

Fri Oct  5 00:24:26 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libelf/_libelf_config.h: Add __riscos__ section (used
	when host equals target triplet).

Thu Oct  4 22:49:56 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Thu Oct  4 22:46:55 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2608

Wed Oct  3 01:45:12 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>

	* configure.ac: Take as minimal version 2.64 iso 2.68.
